--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "https-proxy-agent": "^7.0.6",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "react": "19.2.3",
