--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,9 @@ jobs:
             git fetch origin
             git reset --hard origin/main
             
-            # Installing packages, building and restarting
+            # Installing packages, clearing cache, building and restarting
             npm install
+            rm -rf .next
             npm run build
             pm2 restart predity-web
             
